1.共享动画过程中出现种种view显示空白的情况均由fakeview处理 2.库解决拉取通知栏和显示虚拟导航栏的手势冲突问题 3.库调整滑动返回过程中的缩放算法

--- a/app/src/main/res/layout/rv_item_photos.xml
+++ b/app/src/main/res/layout/rv_item_photos.xml
@@ -5,12 +5,24 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/rv_item_photo_iv"
+        android:id="@+id/rv_item_fake_iv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:transitionName="share_photo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/rv_item_photo_iv"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
