--- a/app/src/main/res/layout/activity_imageview_preview.xml
+++ b/app/src/main/res/layout/activity_imageview_preview.xml
@@ -7,7 +7,7 @@
     android:background="#000000"
     android:orientation="vertical">
 
-    <androidx.viewpager.widget.ViewPager
+    <com.dragclosehelper.example.HackyViewPager
         android:id="@+id/iv_preview_vp"
         android:layout_width="0dp"
         android:layout_height="0dp"
